--- a/.github/workflows/sync_source.yml
+++ b/.github/workflows/sync_source.yml
@@ -1,4 +1,4 @@
-name: Chunked Push of GKI Source
+name: Sync GKI Source
 
 on:
   workflow_dispatch:
@@ -34,8 +34,8 @@ jobs:
         cd gki
 
         GIT_USER="zentrozx"
-        TARGET_REPO="zentrozx/gki-builder"
-        GIT_URL="https://${GIT_USER}:${GH_TOKEN}@github.com/${TARGET_REPO}.git"
+        TARGET_REPO="zentrozx/gki-android12-5.10"
+        GIT_URL="https://=${GIT_USER}:${GH_TOKEN}@github.com/${TARGET_REPO}.git"
 
         # Clone target repo to temp dir
         cd ..
